# moodle-rs

./: .gitignore  Cargo.toml  README.md
moodle/: Cargo.toml
moodle-api/: Cargo.toml
moodle-api/src/: lib.rs
moodle-api/src/auth/email/: get_signup_settings.rs  mod.rs  signup_user.rs
moodle-api/src/block/accessreview/: get_module_data.rs  get_section_data.rs  mod.rs
moodle-api/src/block/recentlyaccesseditems/: get_recent_items.rs  mod.rs
moodle-api/src/block/starredcourses/: get_starred_courses.rs
moodle-api/src/core/: mod.rs
moodle-api/src/core/admin/: set_block_protection.rs  set_plugin_order.rs  set_plugin_state.rs
moodle-api/src/core/auth/: confirm_user.rs  is_age_digital_consent_verification_enabled.rs  is_minor.rs  request_password_reset.rs  resend_confirmation_email.rs
moodle-api/src/core/backup/: get_async_backup_links_backup.rs  get_async_backup_links_restore.rs  get_async_backup_progress.rs  get_copy_progress.rs  mod.rs
moodle-api/src/core/badges/: get_user_badges.rs  mod.rs
moodle-api/src/core/block/: fetch_addable_blocks.rs  get_course_blocks.rs  get_dashboard_blocks.rs
moodle-api/src/core/blog/: get_entries.rs  mod.rs  view_entries.rs
moodle-api/src/core/calendar/: create_calendar_events.rs  delete_calendar_events.rs  delete_subscription.rs  get_action_events_by_course.rs  get_action_events_by_courses.rs  get_action_events_by_timesort.rs  get_allowed_event_types.rs  get_calendar_access_information.rs  get_calendar_day_view.rs  get_calendar_event_by_id.rs  get_calendar_events.rs  get_calendar_export_token.rs  get_calendar_monthly_view.rs  get_calendar_upcoming_view.rs  get_timestamps.rs  submit_create_update_form.rs  update_event_start_day.rs
moodle-api/src/core/change/: editmode.rs  mod.rs
moodle-api/src/core/cohort/: add_cohort_members.rs  create_cohorts.rs  delete_cohort_members.rs  delete_cohorts.rs  get_cohort_members.rs  get_cohorts.rs  mod.rs  search_cohorts.rs  update_cohorts.rs
moodle-api/src/core/comment/: add_comments.rs  delete_comments.rs  get_comments.rs
moodle-api/src/core/competency/: competency_framework_viewed.rs  count_competencies.rs  count_templates.rs  create_competency.rs  create_competency_framework.rs  create_plan.rs  create_template.rs  create_user_evidence_competency.rs  delete_competency.rs  delete_evidence.rs  delete_plan.rs  duplicate_competency_framework.rs  duplicate_template.rs  get_scale_values.rs  grade_competency.rs  grade_competency_in_course.rs  grade_competency_in_plan.rs  list_competencies.rs  list_competencies_in_template.rs  list_competency_frameworks.rs  list_course_competencies.rs  list_course_module_competencies.rs  list_plan_competencies.rs  list_templates.rs  list_templates_using_competency.rs  list_user_plans.rs  plan_cancel_review_request.rs  read_competency.rs  read_competency_framework.rs  read_plan.rs  read_template.rs  read_user_evidence.rs  remove_competency_from_template.rs  (+12 more)
moodle-api/src/gradingform/: mod.rs
moodle-api/src/media/: mod.rs
moodle-api/src/mod_/: mod.rs
moodle-api/src/paygw/: mod.rs
moodle-api/src/qbank/: mod.rs
moodle-api/src/report/: mod.rs
moodle-client/: Cargo.toml
moodle/examples/: course-activity.rs  get-courses.rs  raw-body.rs
moodle/src/: lib.rs
(+1280 files in other folders)
