[package]
name = "moodle_api"
description = "Moodle Webservice Client in Rust."
version = "0.1.0"
keywords = ["moodle"]
readme = "README.md"
license = "AGPL-3.0"
build = "build.rs"
edition = "2021"
homepage = "https://github.com/JacobLinCool/moodle-rs"
repository = "https://github.com/JacobLinCool/moodle-rs"

[lib]
name = "moodle_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
moodle_client = { path = "../moodle-client" }

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
